fix: resolve CORS by explicitly allowing OPTIONS preflight and Vercel origin